crates/analyzer/tests/snapshots/errors__call_send_value_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `bool` can not be used as an argument to `send_value`
  ┌─ [snippet]:3:14
  │
3 │   send_value(true, 0)
  │              ^^^^ wrong type
  │
  = Note: `send_value` expects an `address` as first argument


